exports[`test the round add button matches the snapshot 1`] = `
<button
  className="htZdOf"
  onClick={[Function]}>
  ButtonValue
</button>
`;

exports[`test the round add button with button type given matches the snapshot 1`] = `
<button
  className="htZdOf"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;
